# SpyPi

./: README.md  pyproject.toml
src/spypi/: __init__.py  __main__.py  camera.py  detection.py  streaming.py  utils.py
